# ShowVideoCaptureWithSDL

./: CMakeLists.txt  DebianPackages.txt  LinksList.txt  README.md  build.sh
Infos/: Mycode.txt  Sample1.txt  mainWorking.txt
cmake/: FindCImg.cmake  FindFFmpeg.cmake  FindJPEG.cmake  FindJpeg.cmake  FindV4L2.cmake  Toolchain-RaspberryPi.cmake  Toolchain-RaspberryPi2.cmake  todo_not_work.txt
src/: CMakeLists.txt  CamReader.cpp  CamReader.h  ImageHelper.cpp  ImageHelper.h  main.cpp
