cmake_minimum_required(VERSION 3.10)

project(VideoCamSDL2 CXX)

SET(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
find_package(PkgConfig)
include(CheckCXXCompilerFlag)

## Version depens on
SET (SDL2_VER "2.0.5")
SET (SDL2_IMAGE_VER "2.0.1")
SET (SDL2_TTF_VER "2.0.12")
SET (MAINFOLDER ${PROJECT_SOURCE_DIR})

list(APPEND CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
MESSAGE(STATUS "search for module in ${CMAKE_MODULE_PATH}")

CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
IF(COMPILER_SUPPORTS_CXX11)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSE()
    MESSAGE(ERROR "we need c++11 to build")
ENDIF()

FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_image REQUIRED)
FIND_PACKAGE(v4l2 REQUIRED)
FIND_PACKAGE(Jpeg REQUIRED)

IF(NOT SDL2_FOUND)
    MESSAGE(FATAL_ERROR "we need sdl2")
ENDIF()

include(CTest)
enable_testing()

ADD_SUBDIRECTORY(src)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
