message(STATUS "working on src dir")

FILE (GLOB_RECURSE SRCS "*.cpp" "*.cxx" "*.cc")

add_executable(VideoCamSDL2 ${SRCS})

TARGET_LINK_LIBRARIES(VideoCamSDL2 ${SDL2_LIBRARIES})
TARGET_LINK_LIBRARIES(VideoCamSDL2 ${LIBV4L2_LIBRARIES})
##TARGET_LINK_LIBRARIES(${project_BIN} ${SDL2_TTF_LIBRARIES})
TARGET_LINK_LIBRARIES(VideoCamSDL2 ${SDL2_IMAGE_LIBRARIES})
##TARGET_LINK_LIBRARIES(${project_BIN} ${SDL2_MIXER_LIBRARIES})
##TARGET_LINK_LIBRARIES(${project_BIN} ${SDL2_NET_LIBRARIES})
