message(STATUS "working on src dir")

FILE (GLOB_RECURSE SRCS "*.cpp" "*.cxx" "*.cc")

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
##INCLUDE_DIRECTORIES(${SDL2_TTF_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SDL2_IMAGE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${LIBJPEG_INCLUDE_DIRS})
##INCLUDE_DIRECTORIES(${SDL2_MIXER_INCLUDE_DIRS})
##INCLUDE_DIRECTORIES(${SDL2_NET_INCLUDE_DIRS})

add_executable(VideoCamSDL2 ${SRCS})

TARGET_LINK_LIBRARIES(VideoCamSDL2 ${SDL2_LIBRARIES})
TARGET_LINK_LIBRARIES(VideoCamSDL2 ${V4L2_LIBRARIES})
##TARGET_LINK_LIBRARIES(${project_BIN} ${SDL2_TTF_LIBRARIES})
TARGET_LINK_LIBRARIES(VideoCamSDL2 ${SDL2_IMAGE_LIBRARIES})
TARGET_LINK_LIBRARIES(VideoCamSDL2 ${JPEG_LIBRARIES})
##TARGET_LINK_LIBRARIES(${project_BIN} ${SDL2_MIXER_LIBRARIES})
##TARGET_LINK_LIBRARIES(${project_BIN} ${SDL2_NET_LIBRARIES})
